# pomodoro-musician

./: .gitignore  pyproject.toml  requirements.txt  setup.py
resources/: icon.icns
resources/docs/: INSTALL_INSTRUCTIONS.md  README.md
scripts/: build_app.sh  build_final.sh  build_macos.sh  build_simple.sh  create_alarm.py  create_break_sound.py  create_icon.py
src/pomodoro_timer/: __init__.py  pomodoro.py
