[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pomodoro-timer"
version = "1.0.0"
description = "A modern Pomodoro timer application with GUI"
readme = "resources/docs/README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.6.0",
    "pyinstaller>=5.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.scripts]
pomodoro-timer = "pomodoro_timer.pomodoro:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
pomodoro_timer = ["../resources/sounds/*.wav"]
